fixed patient images not showing up

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -185,7 +185,10 @@ figure {
   right: 0px;
 position: relative;
 display:inline;
-width: 17px;
+
+}
+.border-bottom img {
+  width: 17px;
 height: 18px;
 }
 #pick-size {
